# PhoenixGo

./: .gitignore  .travis.yml  README.md  WORKSPACE  configure.py  configure_tensorflow.sh  rules.bzl  workspace.bzl
.circleci/: config.yml
common/: errordef.h  go_comm.cc  go_comm.h  go_state.cc  go_state.h  str_utils.cc  str_utils.h  task_queue.h  thread_conductor.cc  thread_conductor.h  timer.cc  timer.h  wait_group.cc  wait_group.h
etc/: mcts_1gpu.conf  mcts_1gpu_elf.conf  mcts_1gpu_lz.conf  mcts_1gpu_notensorrt.conf  mcts_1gpu_notrt.conf  mcts_1gpu_notrt_elf.conf  mcts_1gpu_notrt_lz.conf  mcts_2gpu.conf  mcts_2gpu_elf.conf  mcts_2gpu_lz.conf  mcts_2gpu_notrt.conf  mcts_2gpu_notrt_elf.conf  mcts_2gpu_notrt_lz.conf  mcts_3gpu.conf  mcts_3gpu_elf.conf  mcts_3gpu_lz.conf  mcts_3gpu_notrt.conf  mcts_3gpu_notrt_elf.conf  mcts_3gpu_notrt_lz.conf  mcts_4gpu.conf  mcts_4gpu_elf.conf  mcts_4gpu_lz.conf  mcts_4gpu_notrt.conf  mcts_4gpu_notrt_elf.conf  mcts_4gpu_notrt_lz.conf  mcts_async_dist.conf  mcts_cpu.conf  mcts_dist.conf  mcts_tpu.conf
mcts/: BUILD  byo_yomi_timer.cc  byo_yomi_timer.h  debug_tool.cc  mcts_config.cc  mcts_config.h  mcts_debugger.cc  mcts_debugger.h  mcts_engine.cc  mcts_engine.h  mcts_main.cc  mcts_monitor.cc  mcts_monitor.h
model/: BUILD  build_tensorrt_model.cc  checkpoint_utils.cc  checkpoint_utils.h  model_config.proto  tf_zero_model.cc  tf_zero_model.h  tpu_zero_model.cc  tpu_zero_model.h  trt_zero_model.cc  zero_model.cc  (+3 more)
scripts/trt_test/: CMakeLists.txt  trt_test.cc  trt_test.py
scripts/u2p/: CMakeLists.txt  uff_to_plan.cc  uff_to_plan.cpp
(+344 files in other folders)
